# codex-dev-universal

./: .env.example  .pre-commit-config.yaml  Makefile  instructions.md  mypy.ini  package.json  ruff.toml
.github/workflows/: ci.yml
agentic/: .gitignore  Makefile  README.md  pyproject.toml
agentic/apps/gateway/: api.py  db.py  main.py  mcp_client.py  models.py  runtime_provider.py  scheduler.py  settings.py  ws.py
agentic/apps/manager/: dispatcher.py  events.py  main.py  orchestrator.py  persistence.py  planner.py  repair.py  settings.py
agentic/apps/mcp_server/: main.py  schemas.py  server.py
agentic/apps/mcp_server/tools/: drive.py  notify.py  python_run.py  repo_git.py  websearch.py
agentic/apps/runtime/: base.py  docker_runtime.py  process_runtime.py
agentic/infra/compose/: docker-compose.yml
agentic/infra/k8s/: README.md
agentic/web/: index.html  package.json
agentic/web/src/: App.tsx  api.ts
agentic/web/src/components/: ArtifactBrowser.tsx  DagView.tsx  LogViewer.tsx  RunConsole.tsx  WorkflowEditor.tsx
agentic/workers/codegen/: main.py
agentic/workers/eval/: main.py
agentic/workers/notify/: main.py
agentic/workers/plan/: main.py
agentic/workers/repo/: main.py
agentic/workers/research/: main.py
agentic/workers/transform/: main.py
agentic/workflows/: build_service.yaml
