[project]
name = "agentic"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
  "pydantic-settings>=2.3",
  "redis>=5.0",
  "psycopg[binary]>=3.2",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "httpx>=0.27",
  "orjson>=3.10",
  "python-dotenv>=1.0",
  "typing-extensions>=4.12",
  "opentelemetry-sdk>=1.26",
  "opentelemetry-instrumentation-fastapi>=0.47b0",
  "cryptography>=42.0",
  "colorlog>=6.8",
]

[tool.uv]
dev-dependencies = ["pytest>=8.2","pytest-asyncio>=0.23","ruff>=0.5","mypy>=1.10"]
